Actions
Bug #9068
closedlibgen: this statement may fall through
Start date:
2018-02-07
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Issue found by gcc 7 build:
../common/gmatch.c:44:4: error: this statement may fall through [-Werror=implicit-fallthrough=] p += n ^ ../common/gmatch.c:131:3: note: in expansion of macro 'Popwchar' Popwchar(p, c); ^~~~~~~~ ../common/gmatch.c:133:2: note: here default: ^~~~~~~ ../common/reg_compile.c:399:8: error: this statement may fall through [-Werror=implicit-fallthrough=] if (c >= '1' && c <= '9') { ^ ../common/reg_compile.c:410:3: note: here defchar: ^~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit b711df127690046522dfa24aecd9b91223cc4d77
commit b711df127690046522dfa24aecd9b91223cc4d77 Author: Toomas Soome <tsoome@me.com> Date: 2018-02-12T10:56:53.000Z 9068 libgen: this statement may fall through Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Yuri Pankov <yuripv@yuripv.net> Approved by: Hans Rosenfeld <hans.rosenfeld@joyent.com>
Actions