usr/src/lib/libgen/common/gmatch.c
@@ -27,8 +27,6 @@
 /*	Copyright (c) 1988 AT&T	*/
 /*	  All Rights Reserved  	*/
 
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
-
 #include <sys/types.h>
 #include <libgen.h>
 #include <stdlib.h>
@@ -129,11 +127,12 @@ gmatch(const char *s, const char *p)
 	case '\\':
 		/* skip to quoted character and see if it matches */
 		Popwchar(p, c);
+		/* FALLTHROUGH */
 
 	default:
 		if (c != scc)
 			return (0);
-			/*FALLTHRU*/
+		/* FALLTHROUGH */
 
 	case '?':
 		return (scc > 0 ? gmatch(s, p) : 0);
